@@ -3,6 +3,7 @@ package ElasticSearch;
 use strict;
 use warnings FATAL => 'all';
 use Any::URI::Escape qw(uri_escape);
+use Carp;
 use constant {
     ONE_REQ     => 1,
     ONE_OPT     => 2,
@@ -17,18 +18,19 @@ use constant {
     CMD_INDEX_TYPE_ID => [ index => ONE_REQ, type => ONE_REQ, id => ONE_REQ ],
     CMD_INDEX_TYPE_id => [ index => ONE_REQ, type => ONE_REQ, id => ONE_OPT ],
     CMD_INDEX_type_ID => [ index => ONE_REQ, type => ONE_ALL, id => ONE_REQ ],
-    CMD_index        => [ index => MULTI_BLANK ],
-    CMD_INDICES      => [ index => MULTI_REQ ],
-    CMD_INDEX        => [ index => ONE_REQ ],
-    CMD_INDEX_TYPE   => [ index => ONE_REQ, type => ONE_REQ ],
-    CMD_INDEX_type   => [ index => ONE_REQ, type => MULTI_BLANK ],
-    CMD_index_TYPE   => [ index => MULTI_ALL, type => ONE_REQ ],
-    CMD_INDICES_TYPE => [ index => MULTI_REQ, type => ONE_REQ ],
-    CMD_index_type   => [ index => MULTI_ALL, type => MULTI_BLANK ],
-    CMD_RIVER        => [ river => ONE_REQ ],
-    CMD_nodes        => [ node  => MULTI_BLANK ],
-    CMD_NAME         => [ name  => ONE_REQ ],
-    CMD_INDEX_PERC   => [ index => ONE_REQ, percolator => ONE_REQ ],
+    CMD_index           => [ index => MULTI_BLANK ],
+    CMD_INDICES         => [ index => MULTI_REQ ],
+    CMD_INDEX           => [ index => ONE_REQ ],
+    CMD_INDEX_TYPE      => [ index => ONE_REQ, type => ONE_REQ ],
+    CMD_INDEX_type      => [ index => ONE_REQ, type => MULTI_BLANK ],
+    CMD_index_TYPE      => [ index => MULTI_ALL, type => ONE_REQ ],
+    CMD_INDICES_TYPE    => [ index => MULTI_REQ, type => ONE_REQ ],
+    CMD_index_type      => [ index => MULTI_ALL, type => MULTI_BLANK ],
+    CMD_index_then_type => [ index => ONE_OPT, type => ONE_OPT ],
+    CMD_RIVER           => [ river => ONE_REQ ],
+    CMD_nodes           => [ node  => MULTI_BLANK ],
+    CMD_NAME            => [ name  => ONE_REQ ],
+    CMD_INDEX_PERC      => [ index => ONE_REQ, percolator => ONE_REQ ],
 };
 
 our %QS_Format = (
@@ -241,7 +243,7 @@ sub delete {
         {   method => 'DELETE',
             cmd    => CMD_INDEX_TYPE_ID,
             qs     => {
-                consistency => [ 'enum', [ 'one', 'quorom', 'all' ] ],
+                consistency => [ 'enum', [ 'one', 'quorum', 'all' ] ],
                 ignore_missing => [ 'boolean', 1 ],
                 refresh        => [ 'boolean', 1 ],
                 parent         => ['string'],
@@ -277,69 +279,163 @@ sub analyze {
 ## BULK INTERFACE
 ##################################
 
+#===================================
+sub bulk {
+#===================================
+    my $self = shift;
+    $self->_bulk( 'bulk', $self->_bulk_params( 'actions', @_ ) );
+}
+
+#===================================
+sub _bulk {
+#===================================
+    my ( $self, $method, $params ) = @_;
+    my $actions = $params->{actions} || [];
+    return { actions => [], results => [] } unless @$actions;
+
+    $self->_do_action(
+        $method,
+        {   cmd     => CMD_index_then_type,
+            method  => 'POST',
+            postfix => '_bulk',
+            qs      => {
+                consistency => [ 'enum', [ 'one', 'quorum', 'all' ] ],
+                replication => [ 'enum', [ 'sync', 'async' ] ],
+                refresh => [ 'boolean', 1 ],
+            },
+            data  => { actions => 'actions' },
+            fixup => sub {
+                die "Cannot specify type without index"
+                    if $params->{type} && !$params->{index};
+                $_[1]->{data} = $self->_bulk_request($actions);
+            },
+            post_process => sub { $self->_bulk_response( $actions, @_ ) },
+        },
+        $params
+    );
+}
+
+#===================================
+sub bulk_index  { shift->_bulk_action( 'index',  @_ ) }
+sub bulk_create { shift->_bulk_action( 'create', @_ ) }
+sub bulk_delete { shift->_bulk_action( 'delete', @_ ) }
+#===================================
+
+#===================================
+sub _bulk_action {
+#===================================
+    my $self   = shift;
+    my $action = shift;
+    my $params = $self->_bulk_params( 'docs', @_ );
+    $params->{actions}
+        = [ map { +{ $action => $_ } } @{ delete $params->{docs} } ];
+    return $self->_bulk( "bulk_$action", $params );
+}
+
+#===================================
+sub _bulk_params {
+#===================================
+    my $self = shift;
+    my $key  = shift;
+
+    return { $key => [], @_ } unless ref $_[0];
+    return
+        ref $_[0] eq 'ARRAY' ? { $key => $_[0] } : { $key => [], %{ $_[0] } }
+        unless @_ > 1;
+
+    carp "The method signature for bulk methods has changed. "
+        . "Please check the docs.";
+
+    if ( ref $_[0] eq 'ARRAY' ) {
+        my $first = shift;
+        my $params = ref $_[0] ? shift : {@_};
+        $params->{$key} = $first;
+        return $params;
+    }
+    return { $key => \@_ };
+}
+
 my %Bulk_Actions = (
     'delete' => {
-        index   => ONE_REQ,
-        type    => ONE_REQ,
-        id      => ONE_REQ,
-        parent  => ONE_OPT,
-        routing => ONE_OPT,
-        version => ONE_OPT,
+        index        => ONE_OPT,
+        type         => ONE_OPT,
+        id           => ONE_REQ,
+        parent       => ONE_OPT,
+        routing      => ONE_OPT,
+        version      => ONE_OPT,
+        version_type => ONE_OPT,
     },
     'index' => {
-        index        => ONE_REQ,
-        type         => ONE_REQ,
+        index        => ONE_OPT,
+        type         => ONE_OPT,
         id           => ONE_OPT,
         data         => ONE_REQ,
         routing      => ONE_OPT,
         parent       => ONE_OPT,
         percolate    => ONE_OPT,
+        timestamp    => ONE_OPT,
+        ttl          => ONE_OPT,
         version      => ONE_OPT,
         version_type => ONE_OPT,
     },
 );
 $Bulk_Actions{create} = $Bulk_Actions{index};
 
-my %Bulk_QS = (
-    consistency => [ 'enum', [ 'one', 'quorom', 'all' ] ],
-    refresh => [ 'boolean', 1 ],
-);
-
 #===================================
-sub bulk {
+sub _bulk_request {
 #===================================
-    my $self = shift;
-    my ( $actions, $qs, $as_json );
-    if ( ref $_[0] eq 'ARRAY' ) {
-        $actions = shift;
-        my $params = ref $_[0] eq 'HASH' ? shift : {@_};
-        $as_json = delete $params->{as_json};
-        $qs = $self->_build_qs( $params, \%Bulk_QS );
-    }
-    else {
-        $actions = [@_];
-    }
-
-    return { actions => [], results => [] } unless @$actions;
+    my $self    = shift;
+    my $actions = shift;
 
     my $json      = $self->transport->JSON;
     my $indenting = $json->get_indent;
     $json->indent(0);
 
-    my $json_docs = eval { $self->_build_bulk_query($actions) };
-    my $error = $@;
-    $json->indent($indenting);
-    die $error unless $json_docs;
+    my $json_docs = '';
+    my $error;
+    eval {
+        for my $data (@$actions)
+        {
+            die "'actions' must be an ARRAY ref of HASH refs"
+                unless ref $data eq 'HASH';
 
-    $self->request( {
-            method       => 'POST',
-            cmd          => '/_bulk',
-            qs           => $qs,
-            as_json      => $as_json,
-            data         => $json_docs,
-            post_process => sub { $self->_bulk_response( $actions, @_ ) },
+            my ( $action, $params ) = %$data;
+            $action ||= '';
+            my $defn = $Bulk_Actions{$action}
+                || die "Unknown action '$action'";
+
+            my %metadata;
+            $params = {%$params};
+            delete @{$params}{qw(_score sort)};
+            $params->{data} ||= delete $params->{_source}
+                if $params->{_source};
+
+            for my $key ( keys %$defn ) {
+                my $val = delete $params->{$key};
+                $val = delete $params->{"_$key"} unless defined $val;
+                unless ( defined $val ) {
+                    next if $defn->{$key} == ONE_OPT;
+                    die "Missing required param '$key' for action '$action'";
+                }
+                $metadata{"_$key"} = $val;
+            }
+            die "Unknown params for bulk action '$action': "
+                . join( ', ', keys %$params )
+                if keys %$params;
+
+            my $data = delete $metadata{_data};
+            my $request = $json->encode( { $action => \%metadata } ) . "\n";
+            $request .= $json->encode($data) . "\n"
+                if $data;
+            $json_docs .= $request;
         }
-    );
+        1;
+    } or $error = $@ || 'Unknown error';
+
+    $json->indent($indenting);
+    die $error if $error;
+
+    return \$json_docs;
 }
 
 #===================================
@@ -371,82 +467,6 @@ sub _bulk_response {
         took    => $results->{took},
         ( @errors ? ( errors => \@errors ) : () )
     };
-}
-
-#===================================
-sub bulk_index  { shift->_bulk_action( 'index',  @_ ) }
-sub bulk_create { shift->_bulk_action( 'create', @_ ) }
-sub bulk_delete { shift->_bulk_action( 'delete', @_ ) }
-#===================================
-
-#===================================
-sub _bulk_action {
-#===================================
-    my $self    = shift;
-    my $action  = shift;
-    my $docs    = ref $_[0] eq 'ARRAY' ? shift : [@_];
-    my @actions = map {
-        { $action => $_ }
-    } @$docs;
-    return $self->bulk( \@actions, @_ );
-}
-
-#===================================
-sub _build_bulk_query {
-#===================================
-    my $self    = shift;
-    my $actions = shift;
-    my $json    = $self->transport->JSON;
-
-    my $json_docs = '';
-    for my $data (@$actions) {
-
-        $self->throw( "Param", 'bulk() expects an array of HASH refs', $data )
-            unless ref $data eq 'HASH';
-
-        my ( $action, $params ) = %$data;
-        $action ||= '';
-        my $defn = $Bulk_Actions{$action}
-            || $self->throw( "Param", "Unknown bulk action '$action'" );
-
-        my %metadata;
-        $params = {%$params};
-        delete @{$params}{qw(_score sort)};
-        $params->{data} ||= delete $params->{_source}
-            if $params->{_source};
-
-        for my $key ( keys %$defn ) {
-            my $val
-                = exists $params->{$key}    ? delete $params->{$key}
-                : exists $params->{"_$key"} ? delete $params->{"_$key"}
-                :                             $self->{_default}{$key};
-            unless ( defined $val ) {
-                next if $defn->{$key} == ONE_OPT;
-                $self->throw(
-                    'Param',
-                    "Missing required param '$key' for bulk action '$action'",
-                    $data
-                );
-            }
-            $metadata{"_$key"} = $val;
-        }
-        if ( exists $metadata{_percolate} ) {
-            $metadata{percolate} = delete $metadata{_percolate};
-        }
-        $self->throw(
-            'Param',
-            "Unknown params for bulk action '$action': "
-                . join( ', ', keys %$params ),
-            $data
-        ) if keys %$params;
-
-        my $data = delete $metadata{_data};
-        my $request = $json->encode( { $action => \%metadata } ) . "\n";
-        $request .= $json->encode($data) . "\n"
-            if $data;
-        $json_docs .= $request;
-    }
-    return \$json_docs;
 }
 
 ##################################
@@ -645,7 +665,7 @@ sub delete_by_query {
             method  => 'DELETE',
             postfix => '_query',
             qs      => {
-                consistency => [ 'enum', [ 'one', 'quorom', 'all' ] ],
+                consistency => [ 'enum', [ 'one', 'quorum', 'all' ] ],
                 replication => [ 'enum', [ 'async', 'sync' ] ],
                 routing => ['flatten'],
             },
@@ -1500,11 +1520,14 @@ sub _do_action {
     } or $error = $@ || 'Unknown error';
 
     $args{post_process} = $defn->{post_process};
-    $self->throw(
-        'Param',
-        $error . $self->_usage( $action, $defn ),
-        { params => $original_params }
-    ) if $error;
+    if ($error) {
+        die $error if ref $error;
+        $self->throw(
+            'Param',
+            $error . $self->_usage( $action, $defn ),
+            { params => $original_params }
+        );
+    }
 
     return $self->request( \%args );
 }
