@@ -19,9 +19,11 @@ $es->put_mapping(
     }
 );
 
-wait_for_es(2);
+wait_for_es();
 
-ok $r= $es->bulk( [ {
+ok $r= $es->bulk(
+    refresh => 1,
+    actions => [ {
             index => {
                 index => 'es_test_1',
                 type  => 'test',
@@ -51,8 +53,7 @@ ok $r= $es->bulk( [ {
             }
         },
         { delete => { index => 'es_test_1', type => 'test', id => 2 } }
-    ],
-    { refresh => 1 }
+    ]
     ),
     'Bulk actions';
 
@@ -66,29 +67,32 @@ is $es->count( match_all => {} )->{count}, 2, ' - 2 docs indexed';
 
 my $hits = $es->search( query => { match_all => {} } )->{hits}{hits};
 
-is @{ $es->bulk_create( $hits, { refresh => 1 } )->{results} }, 2,
+is @{ $es->bulk_create( { refresh => 1, docs => $hits } )->{results} }, 2,
     ' - roundtrip - bulk_create';
 
 is $es->count( match_all => {} )->{count}, 2, ' - 2 docs created';
 
-is @{ $es->bulk_index( $hits, { refresh => 1 } )->{results} }, 2,
+is @{ $es->bulk_index( { refresh => 1, docs => $hits } )->{results} }, 2,
     ' - roundtrip - bulk_index';
 
 is $es->count( match_all => {} )->{count}, 2, ' - 2 docs reindexed';
 
 is @{
-    $es->bulk_delete( [
+    $es->bulk_delete(
+        docs => [
             map { { _index => 'es_test_1', _type => 'test', _id => $_ } }
                 ( 1, 3 )
         ],
-        { refresh => 1 }
+        refresh => 1,
         )->{results}
     },
     2, ' - bulk_delete';
 
 is $es->count( match_all => {} )->{count}, 0, ' - 2 docs deleted';
 
-ok $r= $es->bulk( [ {
+ok $r= $es->bulk(
+    refresh => 1,
+    actions => [ {
             index => {
                 index   => 'es_test_1',
                 type    => 'test',
@@ -124,7 +128,6 @@ ok $r= $es->bulk( [ {
             }
         },
     ],
-    { refresh => 1 }
     )->{results},
     'Bulk versions';
 
@@ -132,5 +135,30 @@ like $r->[0]{index}{error}, qr/Conflict/, ' - index version conflict';
 ok $r->[1]{index}{ok},       ' - index external version ok';
 like $r->[2]{create}{error}, qr/Conflict/, ' - create version conflict';
 ok $r->[3]{create}{ok},      ' - create external version ok';
+
+ok $r = $es->bulk(
+    refresh     => 1,
+    index       => 'es_test_1',
+    type        => 'test',
+    consistency => 'quorum',
+    replication => 'async',
+    actions     => [
+        { index => { id => 5, data => { text => 'foo' } } },
+        { index => { id => 6, type => 'test_2', data => { text => 'bar' } } },
+        {   index =>
+                { id => 7, index => 'es_test_2', data => { text => 'baz' } }
+        },
+    ]
+)->{results}, 'Inherited params';
+
+ok $r->[0]{index}{_index} eq 'es_test_1'
+    && $r->[0]{index}{_type} eq 'test'
+    && $r->[0]{index}{_id} == 5, ' - doc 1';
+ok $r->[1]{index}{_index} eq 'es_test_1'
+    && $r->[1]{index}{_type} eq 'test_2'
+    && $r->[1]{index}{_id} == 6, ' - doc 2';
+ok $r->[2]{index}{_index} eq 'es_test_2'
+    && $r->[2]{index}{_type} eq 'test'
+    && $r->[2]{index}{_id} == 7, ' - doc 3';
 
 1
