@@ -1,10 +1,14 @@
 Revision history for ElasticSearch
 0.48
+        BREAKING CHANGE:
+        Updated the bulk* methods to support index, type, timestamp and ttl
+        args.  As a result, the method signatures have changed.
+
         Fixed support for as_json in ScrolledSearch
         Fixed implicit IO::Handle bug when trying to log in older Perls
         Fixed a bug in index_stats and addded 'get' stats and groups.
-
         Added 'fields' to clear_cache
+        Corrected spelling of 'quorom' to 'quorum'
 0.47    2011-10-24
         Merged patch from AVAR, which ensures that the servers are used in
         random order.
